# rust-esp32s3-lvgl-clickme

./: Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
lvgl-configs/: lv_conf.h
src/: lcd_panel.rs  main.rs
