[package]
name = "rust-esp32s3-lvgl-clickme"
version = "0.1.1"
authors = ["enelson1001 <ednelson5080@gmail>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "rust-esp32s3-lvgl-clickme"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
# Logging
log = "0.4"

# ESP specifics
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }

# LVGL
lvgl = { version = "0.6.2", default-features = false, features = [
    "embedded_graphics",
    "unsafe_no_autoinit",
    #"lvgl_alloc",
    #"alloc"
] }

lvgl-sys = { version = "0.6.2" }

# Hardware IO Abstraction Layer
embedded-hal = {version = "1.0.0"}
embedded-graphics-core = "0.4.0"

# Error
anyhow = "1.0"

# C String
cstr_core = "0.2.1"


[build-dependencies]
embuild = "0.33"


[patch.crates-io]
lvgl = { git = "https://github.com/enelson1001/lv_binding_rust"}
lvgl-sys = { git = "https://github.com/enelson1001/lv_binding_rust"}

# Need to use Master branch if using esp-idf greater than version 5.2 (ie v5.4.2, v5.5.1)otherwise esp_lcd_panel_rgb.h is not included
esp-idf-sys = { git =  "https://github.com/esp-rs/esp-idf-sys.git"}

# Need to use Master branch if using esp-idf v5.5.1 or else you will get the following 2 errors
# error[E0422]: cannot find struct, variant or union type `twai_timing_config_t__bindgen_ty_1` in this scope
# error[E0560]: struct `esp_idf_sys::twai_timing_config_t` has no field named `__bindgen_anon_1`
esp-idf-hal = { git =  "https://github.com/esp-rs/esp-idf-hal.git"}